# k2rule

./: .gitignore  CLAUDE.md  Cargo.toml  GO_SDK_IMPLEMENTATION.md  LICENSE  README.md  README_GO.md  ci_check_test.go  config.go  config_test.go  geoip_manager.go  geoip_manager_test.go  go.mod  go.sum  matcher.go  matcher_test.go  porn.go  porn_remote.go  porn_remote_test.go  porn_test.go  private_ip.go  private_ip_test.go  remote.go  remote_test.go  retry.go  retry_test.go  target.go  target_test.go  tmp_rule_test.go
.github/workflows/: generate-rules.yml
.word9f/pure-go-rewrite/: plan.md  review-report.md
benches/: query_benchmark.rs
clash_rules/: cn_blacklist.yml  cn_whitelist.yml
cmd/k2rule-gen/: fst_builder.go  main.go  main_test.go
docs/: final_heuristic_optimization.md  heuristic_rules_final_recommendation.md  memory-architecture.md  porn-heuristic-detection-zh.md  porn-heuristic-detection.md  porn_heuristic_analysis_summary.md  porn_heuristic_rules.md
docs/features/: pure-go-rewrite.md
docs/knowledge/: architecture-decisions.md  architecture-overview.md  bugfix-patterns.md  framework-gotchas.md  testing-strategies.md
docs/plans/: 2026-01-23-kaitu-rules-compatibility.md  2026-01-29-slice-based-rule-format.md
docs/todos/: p1-windows-mmap.md
examples/basic/: main.go
internal/clash/: converter.go  converter_test.go
internal/porn/: data.go  fst.go  fst_reader.go  heuristic.go  heuristic_test.go
internal/slice/: cached.go  format.go  fst.go  mmap_other.go  mmap_reader.go  mmap_unix.go  mmap_windows.go  reader.go  reader_test.go  writer.go  writer_test.go
scripts/: advanced_pattern_mining.py  analyze_porn_heuristics.py  analyze_verb_noun_patterns.py  deep_analyze_heuristics.py  extract_porn_terminology.py  fast_pattern_analysis.py
src/: error.rs  geoip_manager.rs  global.rs  lib.rs  metadata.rs  porn.rs  porn_fst.rs  porn_heuristic.rs  remote.rs  rule_type.rs  target.rs
src/binary/: cached_reader.rs  format.rs  mod.rs  (+3 more)
tests/: integration.rs  slice_integration.rs
(+16 files in other folders)
